--- a/.github/workflows/deploy-vnet.yml
+++ b/.github/workflows/deploy-vnet.yml
@@ -31,7 +31,7 @@ jobs:
      - uses: azure/login@v1
        name: Sign in to Azure
        with:
-         client-id: ${{ secrets.AZURE_CLIENT_ID_TEST }}
+         client-id: ${{ secrets.AZURE_CLIENT_ID }}
          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
      - if: inputs.environmentType != 'Production'
