Multi env and workflow components part1-fix3

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,7 +26,7 @@ jobs:
       needs: [build, lint]
       with:
         environmentType: Test
-        resourceGroupName: rg-AzureSQLTest
+        resourceGroupName: Azure-SQL_Private_VN-test
         appName: cosmo
         createGateway: yes
       secrets:
