Multi env and workflow components part1-fix4

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,7 +26,7 @@ jobs:
       needs: [build, lint]
       with:
         environmentType: Test
-        resourceGroupName: Azure-SQL_Private_VN-test
+        resourceGroupName: AzureSQLPrivateVNTest
         appName: cosmo
         createGateway: yes
       secrets:
