--- a/.github/workflows/deploy-vnet.yml
+++ b/.github/workflows/deploy-vnet.yml
@@ -25,33 +25,63 @@ on:
 
 jobs:
   validate-vnet:
-     runs-on: ubuntu-latest
-     outputs: 
+    runs-on: ubuntu-latest
+    # outputs: 
+    #  frontendSubnet: ${{ steps.validate-vnet.outputs.frontendSubnet }}
+    steps:
+    - uses: actions/checkout@v3
+    - uses: azure/login@v1
+      name: Sign in to Azure
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    - if: inputs.environmentType != 'Production'
+      uses: azure/arm-deploy@v1
+      name: Run preflight validation
+      with:
+        deploymentName: ${{ github.run_number }}
+        resourceGroupName: ${{ inputs.resourceGroupName }}
+        template: ./deploy/modules/create_vnet_and_vpn.bicep
+        parameters: >           
+          appName=${{ inputs.appName }}
+          createGateway=${{ inputs.createGateway }}
+         #  vnetAddressPrefixes=${{ inputs.vnetAddressPrefixes }}
+         #  subnet1AddressPrefixes=${{ inputs.subnet1AddressPrefixes }}
+         #  subnet2AddressPrefixes=${{ inputs.subnet2AddressPrefixes }}
+         #  subnet3AddressPrefixes=${{ inputs.subnet3AddressPrefixes }}
+         #  vpnClientAddressPrefix=${{ inputs.vpnClientAddressPrefix }}
+        deploymentMode: Validate
+
+  deploy-vnet:
+      runs-on: ubuntu-latest
+      outputs: 
       frontendSubnet: ${{ steps.validate-vnet.outputs.frontendSubnet }}
-     steps:
-     - uses: actions/checkout@v3
-     - uses: azure/login@v1
-       name: Sign in to Azure
-       with:
-         client-id: ${{ secrets.AZURE_CLIENT_ID }}
-         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-     - if: inputs.environmentType != 'Production'
-       uses: azure/arm-deploy@v1
-       name: Run preflight validation
-       with:
-         deploymentName: ${{ github.run_number }}
-         resourceGroupName: ${{ inputs.resourceGroupName }}
-         template: ./deploy/modules/create_vnet_and_vpn.bicep
-         parameters: >           
-           appName=${{ inputs.appName }}
-           createGateway=${{ inputs.createGateway }}
+      backendSubnet: ${{ steps.validate-vnet.outputs.backendSubnet }}
+      vnetId: ${{ steps.validate-vnet.outputs.vnetId }}
+      steps:
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1
+        name: Sign in to Azure
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      - if: inputs.environmentType != 'Production'
+        uses: azure/arm-deploy@v1
+        name: Run preflight validation
+        with:
+          deploymentName: ${{ github.run_number }}
+          resourceGroupName: ${{ inputs.resourceGroupName }}
+          template: ./deploy/modules/create_vnet_and_vpn.bicep
+          parameters: >           
+            appName=${{ inputs.appName }}
+            createGateway=${{ inputs.createGateway }}
           #  vnetAddressPrefixes=${{ inputs.vnetAddressPrefixes }}
           #  subnet1AddressPrefixes=${{ inputs.subnet1AddressPrefixes }}
           #  subnet2AddressPrefixes=${{ inputs.subnet2AddressPrefixes }}
           #  subnet3AddressPrefixes=${{ inputs.subnet3AddressPrefixes }}
           #  vpnClientAddressPrefix=${{ inputs.vpnClientAddressPrefix }}
-         deploymentMode: Validate
 
 
 
