Multi env and workflow components part1-fix13

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,28 +34,28 @@ jobs:
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-#   validate-infra-test:
-#       uses: ./.github/workflows/deploy-infra.yml 
-#       needs: [build, lint]
-#       with:
-#         environmentType: Test
-#         resourceGroupName: AzureSQLPrivateVNTest
-#         appName: cosmo
-#         frontendSubnet: {{ steps.needs.validate-vnet-test.outputs }}
-#         backendSubnet: 
-#         vnetId: 
-#         createWindowsServer1: 
-#         createLinuxServer1: 
-#         createWindowsDesktop: 
-#         adminDBLoginName: 
-#         databaseName: 
-#         vmSize:  
-#         vmWindowsLoginUser: 
-#         vmLinuxLoginUser:                   
-#       secrets:
-#           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID_TEST }}
-#           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-#           AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-#           adminDBPassword: 
-#           vmWindowsLoginPassword: 
-#           vmLinuxLoginPassword:
+  validate-infra-test:
+      uses: ./.github/workflows/deploy-infra.yml 
+      needs: [deploy-vnet]
+      with:
+        environmentType: Test
+        resourceGroupName: AzureSQLPrivateVNTest
+        appName: cosmo
+        frontendSubnet: ${{ needs.deploy-vnet.outputs.frontendSubnet }}
+        backendSubnet: ${{ needs.deploy-vnet.outputs.backendSubnet }}
+        vnetId: ${{ needs.deploy-vnet.outputs.vnetId }}
+        createWindowsServer1: true
+        createLinuxServer1: true
+        createWindowsDesktop: true
+        adminDBLoginName: gary
+        databaseName: slaesfloor
+        vmSize: 'Standard_A0'  
+        vmWindowsLoginUser: gary
+        vmLinuxLoginUser: gary                  
+      secrets:
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID_TEST }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          adminDBPassword: ${{ secrets.ADMINDBPASSWORD }}
+          vmWindowsLoginPassword: ${{ secrets.VMWINDOWSLOGINPASSWORD }}
+          vmLinuxLoginPassword: ${{ secrets.VMLINUXLOGINPASSWORD }}
