--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -72,7 +72,7 @@ jobs:
      - uses: azure/login@v1
        name: Sign in to Azure
        with:
-         client-id: ${{ secrets.AZURE_CLIENT_ID_TEST }}
+         client-id: ${{ secrets.AZURE_CLIENT_ID }}
          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
      - if: inputs.environmentType != 'Production'
@@ -100,7 +100,7 @@ jobs:
            vmLinuxLoginUser=${{ inputs.vmLinuxLoginUser }}
            vmLinuxLoginPassword=${{ secrets.vmLinuxLoginPassword }}
            environmentType=${{ inputs.environmentType }}
-         deploymentMode: Validate
+        #  deploymentMode: Validate
 
 
 
