--- a/.github/workflows/deploy-vnet.yml
+++ b/.github/workflows/deploy-vnet.yml
@@ -139,7 +139,7 @@ jobs:
         parameters: >
           environmentType=${{ inputs.environmentType }}
           appName=${{ inputs.appName }}
-          vnetId=${{ needs.deploy-vnet.outputs.vnetId }}
+          vnetId="/subscriptions/e6566f19-3eb5-436b-904f-fdd540b4fd58/resourceGroups/AzureSQLPrivateVNTest/providers/Microsoft.Network/virtualNetworks/vnet-cosmo-qxb7mehrcb4hk"  #${{ needs.deploy-vnet.outputs.vnetId }}
           frontendSubnet=${{ needs.deploy-vnet.outputs.frontendSubnet }}
           backendSubnet=${{ needs.deploy-vnet.outputs.backendSubnet }}          
           createWindowsServer1=${{ inputs.createWindowsServer1 }}
