--- a/.github/workflows/deploy-vnet.yml
+++ b/.github/workflows/deploy-vnet.yml
@@ -116,7 +116,7 @@ jobs:
       - name: Echo frontendSubnet
         run: echo "::set-output name=frontendAddressPrefix::${{ fromJson(steps.deploy-vnet.outputs.frontendSubnet).properties.addressPrefix }}"  #"::set-output name=frontendSubnet::${{ steps.deploy-vnet.outputs.frontendSubnet }}"       
       - name: Echo vnetID  
-        run: echo "::set-output name=frontendSubnet::${{ steps.deploy-vnet.outputs.vnetId }}"
+        run: echo "::set-output name=frontendSubnet::${{ fromJson(steps.deploy-vnet.outputs.vnetId) }}"
         
   deploy-infra:    
     runs-on: ubuntu-latest
@@ -139,8 +139,8 @@ jobs:
         parameters: >
           environmentType=${{ inputs.environmentType }}
           appName=${{ inputs.appName }}
-          vnetId=${{ fromJson(needs.deploy-vnet.outputs.vnetId) }}
-          frontendSubnet=${{ fromJson(needs.deploy-vnet.outputs.frontendSubnet) }}
+          vnetId=${{ needs.deploy-vnet.outputs.vnetId }}
+          frontendSubnet=${{ needs.deploy-vnet.outputs.frontendSubnet }}
           backendSubnet=${{ needs.deploy-vnet.outputs.backendSubnet }}
           createWindowsServer1=${{ inputs.createWindowsServer1 }}
           createLinuxServer1=${{ inputs.createLinuxServer1 }}
