--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,16 +14,16 @@ permissions:
 jobs:
 
   # Build the application and database.
-  build:
-    uses: ./.github/workflows/build.yml
+#   build:
+#     uses: ./.github/workflows/build.yml
 
-  # Lint the Bicep file.
-  lint:
-    uses: ./.github/workflows/lint.yml
+#   # Lint the Bicep file.
+#   lint:
+#     uses: ./.github/workflows/lint.yml
 
   deploy-vnet:
       uses: ./.github/workflows/deploy-vnet.yml
-      needs: [build, lint]
+    #   needs: [build, lint]
       with:
         environmentType: Test
         resourceGroupName: AzureSQLPrivateVNTest
