Multi env and workflow components part1-fix18

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,7 +28,7 @@ jobs:
         environmentType: Test
         resourceGroupName: AzureSQLPrivateVNTest
         appName: cosmo
-        createGateway: yes 
+        createGateway: false 
         createWindowsServer1: false
         createLinuxServer1: false
         createWindowsDesktop: false
